--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -93,7 +93,7 @@ Leiden Observatory, Leiden University, Niels Bohrweg 2, 2333 CA Leiden, The Neth
 %
 %-------------------------------------------------------------------
 \section{Introduction}
-The discovery of cosmic shear has provided us with a new and powerful cosmological tool to empirically test the standard model of cosmology and to determine its parameters. Contrary to the analysis of the cosmic microwave background \citep[CMB, e.g.~by][]{2018arXiv180706209P}, cosmic shear is more sensitive to the properties of the low-redshift large-scale structure and thus provides an excellent consistency check for the standard model. Current cosmic shear surveys are particularly sensitive to the parameter $S_8=\sigma_8 \sqrt{\Omega_{\rm m}/0.3}$, where $\sigma_8$ characterizes the normalization of the matter power spectrum and $\Omega_{\rm m}$ is the matter density parameter. Constraints on $S_8$ from the three current major cosmic shear results are all consistent with the CMB analysis by \citet{2018arXiv180706209P}. It is interesting to note, however, that they all favour values that are slightly lower than the Planck constraints of $S_8 = 0.830 \pm 0.013$. \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from an analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data, and \citet{2018PhRvD..98d3528T} constrain $S_8=0.782\pm 0.027$ using the Dark Energy Survey (DES).  Combined analyses of DES and KiDS data \citep{Joudaki:2019, asgari/etal:2019} results in a $\sim 3 \sigma S_8$ tension with the CMB value. If this tension is not the manifestation of an unaccounted systematic effect, in either the cosmic shear surveys \citep{Mandelbaum:2019} or the Planck mission \citep{2016ApJ...818..132A}, it certainly merits attention. It could be interpreted as a sign of new physics with examples like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P} and coupling within the dark sector \citep{Kumar:2019}.  It could also, however, be a simple statistical coincidence.
+The discovery of cosmic shear has provided us with a new and powerful cosmological tool to empirically test the standard model of cosmology and to determine its parameters. Contrary to the analysis of the cosmic microwave background \citep[CMB, e.g.~by][]{2018arXiv180706209P}, cosmic shear is more sensitive to the properties of the low-redshift large-scale structure and thus provides an excellent consistency check for the standard model. Current cosmic shear surveys are particularly sensitive to the parameter $S_8=\sigma_8 \sqrt{\Omega_{\rm m}/0.3}$, where $\sigma_8$ characterizes the normalization of the matter power spectrum and $\Omega_{\rm m}$ is the matter density parameter. Constraints on $S_8$ from the three current major cosmic shear results are all consistent with the CMB analysis by \citet{2018arXiv180706209P}. It is interesting to note, however, that they all favour values that are slightly lower than the Planck constraints of $S_8 = 0.830 \pm 0.013$. \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from an analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data, and \citet{2018PhRvD..98d3528T} constrain $S_8=0.782\pm 0.027$ using the Dark Energy Survey (DES).  Combined analyses of DES and KiDS data \citep{Joudaki:2019, asgari/etal:2019} results in a $\sim 3 \sigma$ tension with the CMB value for $S_8$. If this tension is not the manifestation of an unaccounted systematic effect, in either the cosmic shear surveys \citep{Mandelbaum:2019} or the Planck mission \citep{2016ApJ...818..132A}, it certainly merits attention. It could be interpreted as a sign of new physics with examples like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P} and coupling within the dark sector \citep{Kumar:2019}.  It could also, however, be a simple statistical coincidence.
 
 %It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from the CMB analysis by \citet{2018arXiv180706209P}. While their analysis determined a value of $S_8 = 0.830 \pm 0.013$, \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from an analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data, and the Dark Energy Survey \citep[DES,][]{2018PhRvD..98d3528T} arrived at $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from their analysis of CFHTLens data. Reweighting the obtained redshifts of data from DES and combining this with KiDS data \citep[][Asgari et al.~in prep.]{Joudaki:2019}, yields even higher tension with the value determined for $S_8$ by the Planck Collaboration. This discrepancy has received a lot of attention. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
 
@@ -318,6 +318,8 @@ where the $\xi_{+,nn}^{ij}(\theta_{\rm{ref}})$ denotes the model correlation fun
 
 While the first method suffers from the fact that the power-law index only holds for sources of redshifts $1\lesssim z \lesssim 2$, the second method is sensitive to the angular range $\theta_{\rm{ref}}$, at which the shear correlation functions are evaluated, which is fairly arbitrary. In our case, we chose $\theta_{\rm{ref}}\approx 11'$, which is roughly in the logarithmic middle between the range of the correlation functions, $[0.\!'5,300']$. The choice of other values for $\theta_{\rm{ref}}$ leads to a different amplitude of the change $\xi_\pm/\xi_\pm^{\rm{obs}}$, but does not affect its shape. In particular, the highest amplitude of the change is at $\theta_{\rm{ref}}=0.\!'5$.
 
+\subsection{Effect on the shear correlation functions}
+
 We applied both analytic methods and the semianalytic one to data from KV450, following the separation into tomographic bins as in H18, and computed the ratio between our model for the observed correlation functions, $\xi_{\pm}^{\rm{obs}}$, and the model correlation functions, $\xi_{\pm}$, ignoring variations in depth. 
 
 We compare our models to the results measured from numerical simulations. Using a modified version (Joachimi, Lin, et al. in prep.) of Full-sky Lognormal Astro-fields Simulation Kit \citep[FLASK,][]{Xavier:2016}, we generate galaxy mocks with coherent clustering and lensing signals from lognormal fields. For each lognormal field, one mock with uniform depth and another one with variable depth is generated. In the variable case, the depth of KiDS-1000 data \citep{Kuijken:2019} is binned by magnitude into roughly 20 bins. Afterwards, a linear relation between depth and effective number density is extracted. The KiDS-1000 survey is put on a Healpix grid, and for each pixel the limiting magnitude is calculated. According to this limiting magnitude, an effective number density can be assigned, using the linear relation extracted above. For each pixel and each tomographic redshift bin we use the same limiting magnitude to assign an average source redshift distribution from the ones extracted in this work. In the uniform case, redshifts and number densities are sampled from the average of these tomographic sets. Finally, the ratio of the average lensing signals from the two mocks is computed. The number of realizations is 2000. Shape noise is omitted. 
@@ -348,15 +350,20 @@ An additional difference between the models and simulations is that in the model
 \label{fig:mcmc_results}
 \end{figure*} 
 
+\subsection{Impact on cosmological parameter constraints}
+
 As the next step we want to assess how the observational depth variations propagate to cosmological parameters inferred from $\xi_\pm^{ij,\rm{obs}}$ compared to $\xi_\pm^{ij}$. For this test we choose a fiducial cosmology, $\b \Phi$, and determine the relative change in $\Omega_{\rm m}$ and $\sigma_8$ compared to a reference setup with uniform depth. All other cosmological parameters are kept fixed. First, we compute the reference correlation functions, $\xi_\pm^{ij}(\theta,\b\Phi)$, for each pair of redshift bins $i,j$ using \textsc{Nicaea} as described in Sec.~\ref{sec:xipm_semianalytic}. Then we derive the observed correlation functions, $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$, from Eq.~(\ref{eq:correctionfunction2}). Using the Markov-Chain Monte Carlo sampler \textsc{emcee}, we sample correlation functions $\xi_\pm^{ij}(\theta,\b\Phi')$ for different cosmologies $\b\Phi'$ and find the likelihood distribution, given the data vector $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$ and the covariance-matrix computed in H18. This yields an estimate of the shift in $\Omega_{\rm m}$ and $\sigma_8$ introduced by varying depth.
 
-As can be seen in Fig.~\ref{fig:mcmc_results}, the impact of varying depth is insignificant compared to the uncertainties. To get a rough estimate for the impact on future surveys, we divide our covariance-matrix by a factor of 30, to approximately account for the increased survey area of LSST and Euclid with respect to KV450. Here, the impact on $\Omega_{\rm m}$, $\sigma_8$ and $S_8$ is significant at the level of approximately $1\sigma$. It should be noted that while Euclid is a space-based mission, the photometric redshift determination will be performed using several ground-based telescopes, which means that Euclid will suffer from variations in depth that are at least as large as in KiDS. While the data from LSST will be practically free of variations in depth after 10 years of observations, their first-year data will equally suffer from this effect. 
+As can be seen in Fig.~\ref{fig:mcmc_results}, the impact of varying depth is insignificant compared to the uncertainties. To get a rough estimate for the impact on future surveys, we divide our covariance-matrix by a factor of 30, to approximately account for the increased survey area of LSST and Euclid with respect to KV450. Here, the impact on $\Omega_{\rm m}$, $\sigma_8$ and $S_8$ is significant at the level of approximately $1\sigma$. We note that even though Euclid is a space-based mission, and therefore will not suffer from variable atmospheric effects, the key photometric redshift measurement uses data from several ground-based surveys, including KiDS.   Placing a selection criteria on redshift estimation success will therefore lead to depth variations in the source galaxy sample. While the data from LSST will be practically free of variations in depth after 10 years of observations, the first few years data will include significant depth variation. The impact may be even stronger than the KiDS-like analysis presented here as the multi-band KiDS depth variation was minimised using seeing-dependent data acquisition. This is in contrast to the seeing-agnostic multi-band cadence of LSST.
+
 
 Calculating the correction $\xi_\pm^{ij}/\xi_\pm^{ij,\rm{obs}}$ for varying values of $\Omega_{\rm{m}}$ and $\sigma_8$ reveals a nontrivial dependence on the cosmology, which can be seen in Figure \ref{fig:comparecosmo}. For various combinations of $\Omega_{\rm{m}}$ and $\sigma_8$ within the $95\%$ confidence limit of KV450, we report a variation in $\xi_\pm/\xi_\pm^{\rm{obs}}$ of a few percentage points on small scales.
 
+\subsection{Variable depth contribution to B-modes}
+
 To estimate the B-modes created by this effect, we extract the COSEBIs
 %, once of a reference set of correlation functions, to estimate numerical inaccuracies,\footnote{For a reference correlation function the B-Modes should be consistent with zero.} and then 
- from the correlation functions, $\xi_\pm^{\rm{obs}}$, that have been modified under the semi-analytic model, and from a reference set of correlation functions $\xi_\pm$. To be most sensitive to the effect of varying depth, we chose logarithmic COSEBIs with an angular range of $\theta_{\rm{min}}=0.\!'5$ to $\theta_{\rm{max}}=72'$. As the B-modes of the reference correlation functions are zero, they are a good test for numerical errors in the calculations. Motivated by the discussion in \citet{2017MNRAS.464.1676A}, we calculated the COSEBIs from correlation functions binned in $400\,000$ linear bins, which yielded neglible numerical errors. We report a consistent B-mode behaviour across all redshift-bins, which can be seen in Figure \ref{fig:bmodes_cosebi}. However, we compare the B-Modes to the ones measured by Asgari et al.~(in prep.) in KV450, which were consistent with zero. Since the B-modes created by varying depth are smaller than these by a factor of 50, we conclude that this effect cannot create measurable B-modes in the KV450 survey. It should be noted that the difference in E-modes is as large as the B-modes, which suggests that any significant change in the cosmological parameters due to a varying depth will also yield a significant detection of B-modes.
+ from the correlation functions, $\xi_\pm^{\rm{obs}}$, that have been modified under the semi-analytic model, and from a reference set of correlation functions $\xi_\pm$. To be most sensitive to the effect of varying depth, we chose logarithmic COSEBIs with an angular range of $\theta_{\rm{min}}=0.\!'5$ to $\theta_{\rm{max}}=72'$. As the B-modes of the reference correlation functions are zero, they are a good test for numerical errors in the calculations. Motivated by the discussion in \citet{2017MNRAS.464.1676A}, we calculated the COSEBIs from correlation functions binned in $400\,000$ linear bins, which yielded neglible numerical errors. We report a consistent B-mode behaviour across all redshift-bins, which can be seen in Figure \ref{fig:bmodes_cosebi}. However, we compare the B-Modes to the ones measured by \citet{asgari/etal:2019} in KV450, which were consistent with zero. Since the B-modes created by varying depth are smaller than these by a factor of 50, we conclude that this effect cannot create measurable B-modes in the KV450 survey. It should be noted that the difference in E-modes is as large as the B-modes, which suggests that any significant change in the cosmological parameters due to a varying depth will also yield a significant detection of B-modes.
 
 
 \begin{figure*}
@@ -381,16 +388,14 @@ With our semi-analytic model we describe the impact of varying depth in ground-b
 
 Despite these repercussions, we are confident to say that the effects of varying depth are not significant for the KV450 survey. In particular this means that a varying depth cannot explain the discrepancy between observations of the low-redshift Universe and results from analysis of the CMB.
 
-We have shown that this effect can create B-modes. However, Asgari et al. (in prep.) measured the B-modes of the KV450 survey in the same $\theta$-range. The results are consistent with zero, yet their statistical fluctuations are larger than the B-modes created by varying depth by a factor of approx.~$50$. Thus it is safe to say that varying depth does not create any measurable B-modes in the KV450 survey. An interesting observation is that the change in E-modes is as large as the created B-modes (compare Fig.~\ref{fig:bmodes_cosebi}). This means that as soon as this effect causes a significant bias in the cosmological parameters, it will also create significant B-modes. Additionally, the created pattern is very characteristic, which makes it easy to recognize in a B-mode analysis of an actual survey \citep[see][]{2018arXiv181002353A}.
+We have shown that this effect can create B-modes. However, \citet{asgari/etal:2019} measured the B-modes of the KV450 survey in the same $\theta$-range. The results are consistent with zero, yet their statistical fluctuations are larger than the B-modes created by varying depth by a factor of approx.~$50$. Thus it is safe to say that varying depth does not create any measurable B-modes in the KV450 survey. An interesting observation is that the change in E-modes is as large as the created B-modes (compare Fig.~\ref{fig:bmodes_cosebi}). This means that as soon as this effect causes a significant bias in the cosmological parameters, it will also create significant B-modes. Additionally, the created pattern is very characteristic, which makes it easy to recognize in a B-mode analysis of an actual survey \citep[see][]{2018arXiv181002353A}.
 
-For next-generation surveys like Euclid, this effect will be significant. Considering our quite rough assumptions regarding the variation in depth and the covariance matrix of the Euclid-survey, a study using a realistic variation of depth and covariance matrix should be conducted.
-
-While the cosmology dependence (Fig. \ref{fig:comparecosmo}) is not significant for the KV450 survey, it will be relevant for the Euclid survey. In that case, a calculation of the correction for this effect is necessary for various cosmologies.
+For next-generation surveys like Euclid and LSST we have demonstrated that if variable depth in unaccounted for in the analysis, the resulting bias is likely to be significant. A detailed LSST and Euclid study that uses a realistic variation of depth should therefore be conducted. If these studies reach a similar conclusion, variable-depth bias could be circumvented in likelihood analyses by including a cosmology-dependent correction for this effect using the semi-analytical model presented in this paper (see Fig. \ref{fig:comparecosmo}).
 
 %As an outlook it would be interesting to perform a full MCMC simulation, including both cosmological and nuisance parameters. One might also check the most popular extensions to the standard model of cosmology, and see whether varying depth could cause a bias towards one of these models. Furthermore, the method developed in Appendix \ref{sec:expand_eoftheta} could be applied to the actual footprint of the KV450 survey to see whether finite field effects or a correlated distribution of $r$-band depth are significant.
 Additionally, it is interesting to note that $E(\theta)$ is the azimuthal average of the function $E(\b\theta)$ derived in Sect.~\ref{sec:model_e}, which is not isotropic. Therefore, it would be possible to observe a direction-dependent correlation function $\xi_\pm^{ij,\rm{obs}}(\b\theta)$ in future surveys. An anisotropy in the observed correlation function could be a sign for the influence of varying depth.
 
-The variation in depth will also affect the covariance of a survey, both because they modify the signal and because they introduce an additional term of sample variance in terms of the distribution of depth. This effect will be investigated in a forthcoming publication.
+The variations in depth will also affect the covariance of a survey, both because they modify the signal and because they introduce an additional term of sample variance in terms of the distribution of depth. This effect will be investigated in a forthcoming publication (Joachimi, Lin, et al. in prep.).
 
 %--------------------------------------------------------------------
 
