added the first batch of catherine's suggestion

--- a/cite.bib
+++ b/cite.bib
@@ -1,14 +1,5 @@
 @string{june = {June}}
 
-@article{asgari/etal:2019,
-author={{Asgari} and {Tr{\"o}ster} and {Heymans} and
-  {Hildebrandt} and {van den Busch} and {Wright} and {Choi} and {Erben} and {Joachimi} and
-  {Joudaki} and {Kannawadi} and {Kuijken} and {Lin} and {Schneider} and
-  {Zuntz}},
-  journal = {A\&A submitted},
-  year = {2019}
-}
-
 @article{10.1093/mnras/stx2082,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.472.2126K},
@@ -130,6 +121,25 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
  title = {{Discriminating Weak Lensing from Intrinsic Spin Correlations Using the Curl-Gradient Decomposition}},
  volume = {568},
  year = {2002}
+}
+
+@article{2005ApJ...622..759G,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2005ApJ...622..759G},
+ archiveprefix = {arXiv},
+ author = {{G{\'o}rski}, K.~M. and {Hivon}, E. and {Banday}, A.~J. and {Wand
+elt}, B.~D. and {Hansen}, F.~K. and {Reinecke}, M. and {Bartelmann}, M.},
+ doi = {10.1086/427976},
+ eprint = {astro-ph/0409513},
+ journal = {\apj},
+ keywords = {Cosmology: Cosmic Microwave Background, Cosmology: Observations, Methods: Statistical, Astrophysics},
+ month = {Apr},
+ number = {2},
+ pages = {759-771},
+ primaryclass = {astro-ph},
+ title = {{HEALPix: A Framework for High-Resolution Discretization and Fast Analysis of Data Distributed on the Sphere}},
+ volume = {622},
+ year = {2005}
 }
 
 @article{2006APh....26...91V,
@@ -636,6 +646,15 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
  primaryclass = {astro-ph.CO},
  title = {{Dark Energy Survey Year 1: An independent E/B-mode cosmic shear analysis}},
  volume = {484},
+ year = {2019}
+}
+
+@article{asgari/etal:2019,
+ author = {{Asgari} and {Tr{\"o}ster} and {Heymans} and
+{Hildebrandt} and {van den Busch} and {Wright} and {Choi} and {Erben} and {Joachimi} and
+{Joudaki} and {Kannawadi} and {Kuijken} and {Lin} and {Schneider} and
+{Zuntz}},
+ journal = {A\&A submitted},
  year = {2019}
 }
 
